deploy/ratemygm.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ratemygm
  labels:
    app: ratemygm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratemygm
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: ratemygm
    spec:
      containers:
      - name: ratemygm
        image: <IMAGE>
        ports:
        - containerPort: 3002
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 100m
