deploy/techofmany.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: techofmany
  labels:
    app: techofmany
spec:
  replicas: 1
  selector:
    matchLabels:
      app: techofmany
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  minReadySeconds: 5
  template:
    metadata:
      labels:
        app: techofmany
    spec:
      containers:
      - name: techofmany
        image: <IMAGE>
        ports:
        - name: entry
          containerPort: 3001
        resources:
          requests:
            cpu: 100m
          limits:
            cpu: 100m
      imagePullSecrets:
        - name: regcred

---

apiVersion: v1
kind: Service
metadata:
  name: techofmany
spec:
  type: NodePort
  selector:
    app: techofmany
  ports:
  - protocol: TCP
    port: 3001
    targetPort: entry
